<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".singnupActivity">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">


  <TextView
      android:id="@+id/textView3"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="0dp"
      android:text="@string/sign_up"
      android:textColor="@color/black"
      android:textSize="30sp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.456"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <EditText
      android:id="@+id/editTextTextPersonName"
      android:layout_width="305dp"
      android:layout_height="50dp"
      android:layout_marginTop="23dp"
      android:background="@color/white"
      android:ems="10"
      android:inputType="textPersonName"
      android:hint="@string/username1"
      android:text=""
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.358"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/textView3"
      android:autofillHints="true" />

  <EditText
      android:id="@+id/emailTxt"
      android:layout_width="305dp"
      android:layout_height="50dp"
      android:layout_marginTop="18dp"
      android:background="@color/white"
      android:ems="10"
      android:inputType="textEmailAddress"
      android:hint="@string/email"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.358"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName"
      android:autofillHints="true" />

  <EditText
      android:id="@+id/editTextTextPassword2"
      android:layout_width="305dp"
      android:layout_height="50dp"
      android:layout_marginTop="18dp"
      android:background="@color/white"
      android:ems="10"
      android:hint="@string/password1"
      android:inputType="textPassword"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.358"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/emailTxt"
      android:autofillHints="true" />

  <Button
      android:id="@+id/btnSignup"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="24dp"
      android:text="@string/signup"
      android:textColor="@color/black"
      android:textSize="24sp"
      app:backgroundTint="#CDDC39"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/confirmTxt" />

  <ProgressBar
      android:id="@+id/loading1"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="64dp"
      android:layout_marginBottom="64dp"
      android:gravity="center"
      android:visibility="gone"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="@id/btnSignup"
      app:layout_constraintStart_toStartOf="@id/btnSignup"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.3"/>

  <EditText
      android:id="@+id/confirmTxt"
      android:layout_width="305dp"
      android:layout_height="50dp"
      android:layout_marginTop="16dp"
      android:autofillHints="true"
      android:background="@color/white"
      android:ems="10"
      android:hint="@string/confirm_password"
      android:inputType="textPassword"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.358"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword2" />

  <TextView
      android:id="@+id/textView6"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/already_have_an_account_login"
      android:textSize="18sp"
      android:clickable="true"
      android:focusable="true"
      android:textColor="@color/black"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.558"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/btnSignup"
      app:layout_constraintVertical_bias="0.662" />

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>